# plex

./: .gitignore  Cargo.toml  LICENSE  README.md
.cursor/: mcp.json
.github/workflows/: release.yml
scripts/: package-ext.sh
src/: config.rs  embeddings.rs  graph.rs  indexer.rs  lib.rs  main.rs  parser.rs  search.rs  store.rs  types.rs
src/mcp/: mod.rs  tools.rs  transport.rs
src/viz/: dashboard.html  mod.rs  server.rs
vscode-plex/: LICENSE.md  package-lock.json  package.json
vscode-plex/src/: bridge.ts  callGraph.ts  extension.ts  searchResults.ts  symbolTree.ts
