[package]
name = "plex"
version = "0.1.0"
edition = "2021"
description = "Blazingly fast local code intelligence engine with MCP server and interactive visualizations"
license = "MIT"
readme = "README.md"

[[bin]]
name = "plex"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database (embedded, zero external deps)
rusqlite = { version = "0.31", features = ["bundled"] }

# Tree-sitter parsing (native C speed)
tree-sitter = "0.20"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-go = "0.20"
tree-sitter-java = "0.20"
tree-sitter-c = "0.20"
tree-sitter-cpp = "0.20"

# Embeddings (local ONNX inference, no API calls)
ort = "2.0.0-rc.11"
tokenizers = "0.20"

# File system
walkdir = "2"
ignore = "0.4"
notify = "6"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Hashing
sha2 = "0.10"
hex = "0.4"

# Directories
dirs = "5"

# HTTP (model download only)
reqwest = { version = "0.12", features = ["blocking"] }

# Progress bars
indicatif = "0.17"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
